--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -181,5 +181,8 @@
         <script src="{{ site.url }}/static/js/material.min.js"></script>
         <script src="{{ site.url }}/static/js/main.js"></script>
         <script src="{{ site.url }}/static/js/projects.js"></script>
+        <script type="text/javascript"
+          src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+        </script>
     </body>
 </html>
