javascript must have https

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -182,7 +182,7 @@
         <script src="{{ site.url }}/static/js/main.js"></script>
         <script src="{{ site.url }}/static/js/projects.js"></script>
         <script type="text/javascript"
-          src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+          src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
         </script>
     </body>
 </html>
