--- a/_layouts/doxygen.html
+++ b/_layouts/doxygen.html
@@ -41,5 +41,7 @@ layout: default
     {% endfor %}
     </div>
   </div>
-
+  <script type="text/javascript"
+    src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+  </script>
 </article>
