--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,6 +13,7 @@ layout: default
     </div>
     <hr />
     {% include share-page.html %}
+    {% include mathjax.html %}
 </article>
 <hr />
 {% assign hasSimilar = '' %}
