--- a/_includes/mathjax.html
+++ b/_includes/mathjax.html
@@ -1,11 +1,11 @@
 {% if page.mathjax %}
 <script type="text/x-mathjax-config">
-  MathJax.Hub.Config({
-    tex2jax: {
-      inlineMath: [ ['$','$'], ["\\(","\\)"] ],
-      processEscapes: true
-    }
-  });
+    MathJax.Hub.Config({
+      tex2jax: {
+        inlineMath: [['$','$'], ['\\(','\\)']],
+        processEscapes: true
+      }
+    });
 </script>
 <script
   type="text/javascript"
