--- a/_includes/mathjax.html
+++ b/_includes/mathjax.html
@@ -4,6 +4,12 @@
       tex2jax: {
         inlineMath: [['$','$'], ['\\(','\\)']],
         processEscapes: true
+      },
+        // show equation numbers
+      TeX: {
+        equationNumbers: {
+        autoNumber: "AMS"
+        }
       }
     });
 </script>
