--- a/_layouts/clients.html
+++ b/_layouts/clients.html
@@ -12,7 +12,7 @@ layout: default
     <div class="project-item col-md-4 col-sm-6 col-xs-12" data-tags='{{ i.tags | jsonify | downcase }}'>
     	<div class="well project-outer">
     		<div class="project-inner">
-    			<a href="{{ i.url }}"class="thickbox">
+    			<a href="{{site.baseurl}}{{ i.url }}"class="thickbox">
     			<div class="project-img bordered" style="background-image: url('{{site.url}}/static/img/{{ i.image }}');"></div>
                 </a>
                 {% if i.url %} <a href="{{site.baseurl}}{{ i.url }}"> {% endif %}
